# impostor-hunt-in-texts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code_quality.yml  publish_kedro_viz.yml
conf/base/: catalog.yml  globals.yml  parameters_feature_engineering.yml  parameters_model_prediction.yml  parameters_model_training.yml  parameters_prepare_data.yml
notebooks/: 01-analyze-data.ipynb  debug-feature-engineering.ipynb  debug-model-training.ipynb
src/impostor_hunt_in_texts/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/impostor_hunt_in_texts/pipelines/feature_engineering/: nodes.py  pipeline.py  validate_params.py
src/impostor_hunt_in_texts/pipelines/model_evaluation/: nodes.py  pipeline.py
src/impostor_hunt_in_texts/pipelines/model_prediction/: __init__.py  nodes.py  pipeline.py
src/impostor_hunt_in_texts/pipelines/model_training/: mlflow.py  model_params.py  nodes.py  pipeline.py  validate_params.py
src/impostor_hunt_in_texts/pipelines/prepare_data/: __init__.py  nodes.py  pipeline.py  validate_params.py
src/impostor_hunt_in_texts/utils/: utils.py  utils_model.py
tests/pipelines/feature_engineering/: test_nodes.py
tests/pipelines/model_prediction/: test_pipeline.py
tests/pipelines/prepare_data/: test_nodes.py  test_pipeline.py
